fixed animation problem when the text of first part of about page increases the second section is visible and moves with it, so i fixed it properly by translating second page 100%, and making an exact height for grid, this changes the animation a litlle but that is no problem at all

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -608,7 +608,7 @@ footer{
 #AboutUsSection{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, auto);
+    grid-template-rows: repeat(3, 142px);
     margin-top: 50px;
     margin-left: 30px;
     margin-right: 30px;
@@ -621,7 +621,7 @@ footer{
     width: fit-content;
     position: relative;
     animation-name: Element;
-    animation-duration: 3s; 
+    animation-duration: 2s; 
 }
 
 #firstElementGoal{
@@ -665,7 +665,7 @@ footer{
     grid-row-end: 4;
     color: #FBFF3F;
     animation-name: Element3;
-    animation-duration: 4s;
+    animation-duration: 6s;
 }
 
 @keyframes Element3{
@@ -677,4 +677,14 @@ footer{
         color: #FBFF3F;
         font-size: 40px;
     }
+}
+
+#whyUs{
+    background-image: url("assets/images/background-img.png");
+    transform: translateY(100%)
+}
+
+#line{
+    height: 3px;
+    background-color: white;
 }
